docs/specifications/v1.1/functional-specification.md
# Content to Editable PPT Skill 功能规格说明 v1.1


## v1.1 变更摘要

本版本在 F01–F13 既有功能基础上新增 **F00 Runtime 初始化与可用性检查**，并将其作为需要 PPT 重建能力的任务进入语义重建阶段之前的环境 Gate。

主要变化：

- 新增 F00：Bootstrap、Verify、Fast Preflight、Runtime Repair 与 Environment Failure；
- 明确正常任务不应每次重新安装依赖；
- 明确 Runtime 未 Ready 时不得进入 Layout Planner；
- 两条主工作流增加 F00 Runtime Readiness；
- 异常功能行为增加 environment failure；
- P0 功能与验收场景增加安装、首次初始化和自动修复能力。

---

## 1. 文档目的

本文档基于《Content to Editable PPT Skill 需求规格说明 v1.1》，进一步定义本 Skill 第一版应提供的具体功能、功能边界、输入输出、用户交互、功能之间的流转关系以及异常情况下的预期行为。

本文档回答：

> Skill 需要有哪些功能，每个功能接收什么、完成什么工作、产生什么结果，以及不同功能之间如何衔接。

本文档不规定：

- 具体 Python / Node 脚本名称；
- 具体目录结构；
- JSON Schema 字段；
- Agent YAML 配置；
- Prompt 具体内容；
- 模型型号；
- 并发实现方式；
- PowerPoint COM / OOXML 等底层实现细节。

上述内容由架构设计、Agent 契约、Runtime 执行规范和详细设计文档定义。

---

# 2. 产品功能总览

`Content to Editable PPT Skill` 面向 Claude Code、Codex 等能够执行 Skill 的 AI Coding Agent / Agent Runtime。

在进入需要 PPT 重建能力的主流程前，应先通过 F00 Runtime 初始化与可用性检查：

```text
安装 / 首次运行
→ Bootstrap
→ Verify
→ Runtime Ready
```

正常任务：

```text
Task Start
→ Fast Preflight
├─ Ready → 进入主流程
└─ Not Ready
    → Runtime Repair
    → Reverify
    ├─ Ready → 进入主流程
    └─ Fail → environment_failure
```

第一版提供两条独立入口：

```text
入口 A：Content-to-PPT

用户材料 + PPT要求
→ 材料理解
→ 大纲生成
→ 用户确认大纲
→ Wireframe / 布局规划
→ 页面视觉设计
→ 页面设计图片集
→ 可编辑PPT页面重建
→ 视觉审核
→ 多页整合
→ 最终交付
```

```text
入口 B：Image-to-Editable-PPT

用户页面图片
→ 页面解析
→ 可编辑PPT页面重建
→ 结构检查
→ 视觉审核
→ 必要修订
→ 单页或多页PPT交付
```

两条入口在“图片转可编辑 PPT”阶段汇合。

---

# 3. 功能原则

所有功能应遵循以下优先级：

```text
内容准确性
>
可编辑性
>
视觉质量
>
运行速度
```

功能设计还应遵循：

1. 用户明确要求优先；
2. 大纲必须经过用户确认；
3. Wireframe / 布局规划是正式功能阶段；
4. 页面视觉设计是正式功能阶段；
5. 最终 PPT 必须经过独立视觉审核；
6. 技术问题不应无理由触发内容重新规划；
7. 局部问题优先局部修复；
8. 多页面任务允许并行处理；
9. 不允许使用整页截图冒充可编辑 PPT；
10. 不以固定总运行时长牺牲最终质量。

---

# 4. 功能模块列表

第一版功能划分如下：

| ID | 功能模块 | 主要职责 |
|---|---|---|
| F00 | Runtime 初始化与可用性检查 | 安装 / 首次运行时准备并验证受控 Runtime；任务开始时 Fast Preflight，必要时 Repair |
| F01 | 任务识别与入口路由 | 判断进入 Content-to-PPT 或 Image-to-Editable-PPT |
| F02 | 用户材料读取与要求理解 | 获取可用材料、用户约束和 PPT 目标 |
| F03 | 大纲生成与用户确认 | 形成候选大纲并与用户确认最终内容结构 |
| F04 | Wireframe / 页面布局规划 | 为每页规划信息区域、层级和大致空间关系 |
| F05 | 页面视觉设计策略 | 确定整套 PPT 的视觉方向和页面设计逻辑 |
| F06 | 页面设计图片生成 | 生成每页正式视觉设计图片 |
| F07 | 图片转可编辑 PPT 页面 | 将设计图或用户图片重建为可编辑 PowerPoint |
| F08 | 页面结构质量检查 | 检查内容、对象、字体、边界和编辑性 |
| F09 | 独立视觉审核 | 比较参考设计与 PowerPoint 实际渲染结果 |
| F10 | 定向修订 | 根据审核问题进行最多两次针对性修订 |
| F11 | 多页面任务并行处理 | 允许独立页面并行进入重建和审核流程 |
| F12 | Deck 整合与整体检查 | 合并已通过页面并检查整套演示文稿 |
| F13 | 最终交付 | 交付大纲、页面设计图片集和可编辑 PPTX |

---

# 5. F00 Runtime 初始化与可用性检查

## 5.1 功能目标

确保 Skill 在进入需要 PPT 重建、渲染和验证能力的任务阶段之前，已经具备可用、已验证的运行环境。

F00 不是语义 Agent 功能，而是由 Host Agent 调度、由确定性 Runtime 执行的环境能力。

## 5.2 安装 / 首次运行

首次安装或首次运行时，应能够：

```text
Detect Platform
↓
Bootstrap Managed Runtime
↓
Prepare / Verify Python Dependencies
↓
Prepare / Verify Node Dependencies
↓
Detect Office / Render Backend
↓
Run Smoke Test
↓
Write Runtime Manifest
↓
READY
```

## 5.3 正常任务 Fast Preflight

正常任务开始时不重复完整 Bootstrap，只进行快速预检：

- Managed Runtime 是否存在；
- 依赖状态是否与 Manifest 匹配；
- 当前 Office / Render Backend 是否仍可用；
- 必要目录是否可写；
- 当前任务所需关键能力是否可用。

## 5.4 Runtime Repair

Fast Preflight 发现可修复问题时：

```text
Fast Preflight Fail
↓
Runtime Repair
↓
Reverify
├─ Pass → 继续原任务
└─ Fail → environment_failure
```

Repair 可以处理：

- 项目 Python 依赖缺失；
- 受控虚拟环境损坏；
- Node 项目依赖缺失；
- Runtime Manifest 与实际状态不一致；
- 可重新探测的 Backend 状态。

## 5.5 功能边界

F00 不负责：

- 修改用户内容；
- 修改 Approved Outline / Approved Slide Content；
- 调用 Layout Planner 完成语义重建；
- 调用 Visual Reviewer；
- 通过随意修改用户全局 Python / Node 环境解决问题。

## 5.6 Runtime Ready Gate

对于需要进入图片到可编辑 PPT 重建的任务：

> Runtime 未 Ready 时不得调用 Layout Planner。

## 5.7 输出

至少产生：

- Runtime readiness 状态；
- 当前 Backend 能力；
- 必要的 Runtime Manifest / 验证结果；
- `ready` / `degraded` / `unsupported` / `environment_failure` 等可供 Host 判断的状态。

---

# 6. F01 任务识别与入口路由

## 6.1 功能目标

根据用户当前任务判断应进入哪条主流程。

## 6.2 支持入口

### 入口 A：Content-to-PPT

适用于用户提供：

- 文本材料；
- 文档材料；
- 图片资料；
- 参考资料；
- PPT 制作要求；

并希望生成一套新的完整 PPT。

### 入口 B：Image-to-Editable-PPT

适用于用户已经拥有一张或多张页面设计图，希望直接转换为可编辑 PowerPoint。

该入口不要求：

- 重新生成大纲；
- 重新进行内容规划；
- 强制进入完整 Content-to-PPT 流程。

## 6.3 路由原则

当用户意图明确时直接进入对应流程。

当用户同时提供材料和页面设计图时，宿主 Agent应根据用户要求判断：

- 以现有设计图为准直接重建；
- 或重新进入 Content-to-PPT 设计流程。

## 6.4 输出

- 已确定的任务入口；
- 当前任务目标；
- 后续需要执行的功能阶段。

---

# 7. F02 用户材料读取与要求理解

## 7.1 功能目标

读取宿主 Agent 当前能够可靠访问和理解的用户材料，并整理 PPT 制作约束。

## 7.2 输入支持原则

第一版不在 Skill 功能层维护固定文件扩展名白名单。

支持范围采用：

> 能力驱动的输入支持。

即：

```text
用户材料
→ 宿主 Agent 判断当前是否能够可靠读取
→ 可以读取：进入后续流程
→ 无法可靠读取：向用户说明限制
```

典型材料包括但不限于：

- 直接文本；
- DOCX；
- PDF；
- PNG / JPG 等图片；
- PPTX 参考文件；
- 其他当前宿主 Agent 能够可靠读取的内容。

## 7.3 需要识别的用户要求

包括：

- PPT 主题；
- 目标用途；
- 主要受众；
- 页数或汇报时长；
- 内容重点；
- 必须保留的信息；
- 禁止修改的信息；
- 页面比例；
- 字体要求；
- 配色要求；
- 模板要求；
- 风格要求；
- 参考设计；
- 其他用户明确要求。

## 7.4 AI 对材料的默认处理权限

允许：

- 总结；
- 改写；
- 重组；
- 压缩；
- 调整内容顺序；
- 增加过渡表达；
- 根据材料进行合理解释。

默认不允许：

- 捏造事实；
- 捏造数据；
- 捏造引用；
- 捏造结论；
- 未经用户允许引入关键外部事实。

需要重要外部补充时，应先获得用户授权。

## 7.5 输出

- 可用于大纲规划的内容；
- 用户要求摘要；
- 必须遵守的内容和视觉约束；
- 无法读取或存在不确定性的材料提示。

---

# 8. F03 大纲生成与用户确认

## 8.1 功能目标

将用户材料转化为具有明确叙事逻辑的 PowerPoint 大纲，并通过与用户交流形成最终确认版本。

## 8.2 大纲生成

大纲不应机械复制原材料标题，而应根据：

- 用户目标；
- 受众；
- 页数；
- 汇报逻辑；
- 内容重点；

重新组织演示结构。

## 8.3 每页大纲必须包含

至少包括：

- 页码；
- 页面角色 / 页面类型；
- 页面标题；
- 页面目的；
- 核心观点；
- 主要内容点；
- 视觉表达建议。

示例：

```text
第 06 页｜解决方案

页面目的：
说明为什么需要独立布局规划。

核心观点：
内容生成与页面设计之间必须存在正式布局阶段。

主要内容：
- 内容规划
- 页面布局
- 视觉设计
- 可编辑重建

视觉表达建议：
使用横向四阶段流程图呈现。
```

## 8.4 视觉表达建议的边界

大纲中的视觉表达建议只描述高层意图，例如：

- 流程图；
- 时间线；
- 对比图；
- 卡片矩阵；
- 大数字页；
- 左文右图；
- 关系模型。

大纲阶段不决定：

- 精确坐标；
- 精确尺寸；
- 最终配色；
- 最终字号；
- 复杂装饰；
- 最终 PowerPoint 对象。

## 8.5 用户确认

大纲是整个 Content-to-PPT 流程唯一默认必须人工确认的阶段。

流程：

```text
候选大纲
→ 展示给用户
→ 用户提出修改
→ AI调整
→ 用户确认
→ Approved Outline
```

未确认大纲不得正式进入完整页面设计阶段。

## 8.6 输出

- 最终确认的大纲；
- 大纲文档；
- 后续布局规划所需的逐页信息。

---

# 9. F04 Wireframe / 页面布局规划

## 9.1 功能目标

在最终视觉设计前，为每一页建立清晰的信息结构和页面布局。

## 9.2 必须性

每一页逻辑上都必须经过布局规划。

但：

> 每一页都需要规划，不代表每一页都必须停下来让用户确认。

## 9.3 Wireframe 应规划

包括：

- 标题区域；
- 正文区域；
- 图片区域；
- 图表区域；
- 关系结构；
- 主要视觉区域；
- 信息层级；
- 大致空间比例；
- 页面视觉重心。

## 9.4 Wireframe 不负责

- 最终色彩；
- 最终字体；
- 最终艺术风格；
- 精细阴影；
- 装饰纹理；
- 最终图片生成效果。

## 9.5 用户交互

是否向用户展示 Wireframe，由以下因素决定：

- 用户是否要求；
- 页面复杂程度；
- 设计风险；
- 页数；
- 宿主 Agent 判断。

用户可以明确要求：

> 不需要查看线稿，直接继续。

## 9.6 输出

- 每页 Wireframe / 布局规划；
- 后续视觉设计阶段可直接使用的页面结构。

---

# 10. F05 页面视觉设计策略

## 10.1 功能目标

基于：

- 已确认大纲；
- Wireframe；
- 用户视觉要求；
- PPT 主题和受众；

形成统一的页面视觉设计方向。

## 10.2 用户要求优先

用户明确指定时，必须优先遵循：

- 风格；
- 模板；
- 配色；
- 字体；
- 页面比例；
- 参考图片；
- 参考 PPT；
- 页面布局偏好。

## 10.3 AI 设计自主权

当用户没有规定某些视觉属性时，AI 可以根据：

- 内容；
- 受众；
- 用途；
- PPT 主题；

自行选择合理的设计方式。

原则：

> 用户要求优先，AI 在用户未规定部分拥有设计自主权。

## 10.4 页面数量策略

### 5 页及以下

默认：

```text
Wireframe完成
→ 直接生成全部页面设计
```

不强制先制作单独视觉样张。

### 超过 5 页

默认：

```text
先选择代表性内容页
→ 生成视觉样张
→ 必要时获取用户确认
→ 生成其余页面
```

用户明确要求直接生成全部页面时，可以跳过样张确认。

5 页是默认交互策略阈值，不是技术限制。

## 10.5 输出

- 整套 PPT 的视觉设计方向；
- 页面生成所需的统一设计约束。

---

# 11. F06 页面设计图片生成

## 11.1 功能目标

根据已确认内容、Wireframe 和视觉策略，为每一页生成正式页面设计图片。

## 11.2 页面设计图片的作用

页面设计图同时承担：

1. 页面最终视觉参考；
2. 用户视觉确认依据；
3. 可编辑 PPT 重建的视觉基准；
4. Reviewer 与最终 PowerPoint 渲染图比较的参考。

## 11.3 内容准确性

页面设计图片中的内容必须来源于已确认的大纲及后续明确内容。

不得因为图片生成过程：

- 改写关键数字；
- 改变结论；
- 替换用户确认文字；
- 产生未经授权的新事实。

## 11.4 用户确认

页面设计图是否需要逐页确认采用灵活策略。

以下情况应优先建议确认：

- 用户明确要求；
- 复杂视觉风格；
- 页面数量较多；
- 视觉设计风险较高；
- 代表性样张与用户要求可能存在偏差。

## 11.5 输出

- 每页设计图片；
- 页面设计图片文件集；
- 后续 PPT 重建使用的视觉基准。

---

# 12. F07 图片转可编辑 PPT 页面

## 12.1 功能目标

将：

- 用户直接提供的页面图片；
- 或 F06 生成的页面设计图片；

转换为主要文字和结构可编辑的 PowerPoint 页面。

## 12.2 可编辑性标准

采用：

> 标准 B：文字和主要结构可编辑。

## 12.3 优先原生化对象

以下内容应优先转换为 PowerPoint 原生对象：

- 标题；
- 正文；
- 标签文字；
- 矩形；
- 圆形；
- 基础几何形状；
- 线条；
- 箭头；
- 简单流程结构；
- 基础表格；
- 适合原生表达的基础图表。

## 12.4 可保留图片资产

以下内容允许作为图片：

- 照片；
- 复杂艺术插图；
- 人物；
- 复杂纹理；
- 复杂视觉素材；
- 无法可靠拆解且原生化会显著破坏效果的对象。

## 12.5 冲突处理原则

当：

```text
完全视觉一致
```

与：

```text
主要结构可编辑
```

发生冲突时：

> 优先保证主要内容和主要结构可编辑，允许适度牺牲像素级视觉一致性。

## 12.6 禁止行为

禁止使用：

- 整页截图；
- 整页设计图；
- 整页栅格背景；

直接覆盖整张幻灯片并声称页面“可编辑”。

## 12.7 输出

- 可编辑单页 PPT；
- 可供后续结构检查和视觉审核的页面。

---

# 13. F08 页面结构质量检查

## 13.1 功能目标

在视觉 Reviewer 前确认 PowerPoint 页面在结构和编辑性层面基本合格。

## 13.2 检查内容

至少包括：

- 必需文字是否存在；
- 文字内容是否准确；
- 主要对象是否缺失；
- 对象是否越界；
- 字体是否异常；
- 图片资产是否有效；
- 页面是否可正常打开；
- 页面是否可正常渲染；
- 是否存在整页栅格化规避；
- 主要内容是否仍然可编辑。

## 13.3 Reviewer 调用前置条件

结构检查未通过时，不应直接进入视觉 Reviewer。

应先判断问题属于：

- 技术问题；
- 可修复结构问题；
- 不可恢复问题。

具体恢复机制由 Runtime 执行规范定义。

## 13.4 输出

- 结构检查结果；
- 必要问题清单；
- 是否允许进入视觉审核。

---

# 14. F09 独立视觉审核

## 14.1 功能目标

比较参考设计与 PowerPoint 实际渲染结果，判断视觉还原质量。

## 14.2 独立性要求

视觉审核应由独立 Reviewer 完成。

负责页面重建的 Planner 不得直接替代 Reviewer 完成最终视觉验收。

## 14.3 Reviewer 至少检查

- 页面整体布局；
- 主要元素比例；
- connector topology；
- connector endpoints；
- typography hierarchy；
- crop boundaries；
- background seams；
- visual depth；
- 重要元素位置；
- 页面视觉重心；
- 明显内容遗漏；
- 可编辑性与视觉实现冲突。

## 14.4 Reviewer 结果

至少支持：

```text
pass
revise
critical failure
```

并输出明确问题：

- 问题是什么；
- 位于哪里；
- 影响哪些元素；
- 严重程度；
- 建议修改方向。

## 14.5 输出

- 视觉审核结果；
- 结构化问题清单；
- 是否需要定向修订。

---

# 15. F10 定向修订

## 15.1 功能目标

针对结构检查或视觉 Reviewer 发现的问题进行局部修订。

## 15.2 修订原则

必须：

- 针对具体 issue；
- 优先修改受影响区域；
- 避免无理由整页重新规划；
- 避免重复处理未受影响内容。

## 15.3 用户模式修订上限

用户模式最多允许：

> 2 次定向修订。

流程：

```text
初始版本
↓
Reviewer
↓
需要修订
↓
Revision 1
↓
Reviewer
↓
仍需修订
↓
Revision 2
↓
Reviewer
↓
最终判断
```

即最多形成：

- 初始版本；
- 修订版本 1；
- 修订版本 2。

## 15.4 修订内容

可包括：

- 坐标；
- 元素大小；
- 字体层级；
- 线条和箭头；
- 图片裁切；
- 页面比例关系；
- 颜色；
- 视觉深度；
- 其他 Reviewer 明确指出的问题。

## 15.5 输出

- 修订后的页面；
- 修订后重新审核的结果。

---

# 16. F11 多页面任务并行处理

## 16.1 功能目标

避免多页 PPT 被强制锁定为逐页完全串行处理。

## 16.2 并行原则

在满足以下条件后：

- 大纲已确认；
- 对应页面内容已确定；
- 对应设计图已准备；
- 页面之间不存在必须串行的依赖；

不同页面应允许独立执行。

逻辑形式：

```text
            ┌→ Slide 01
            ├→ Slide 02
Designs ────┼→ Slide 03
            ├→ Slide 04
            └→ Slide N
```

## 16.3 功能层限制

功能规格只规定：

> 页面任务应具备独立执行能力并允许并行。

不规定：

- 最大并发数量；
- 线程；
- 进程；
- Agent context 数量；
- PowerPoint COM 并发策略。

上述内容属于架构和性能设计。

## 16.4 输出

- 多个独立完成或待修订的页面结果。

---

# 17. F12 Deck 整合与整体检查

## 17.1 功能目标

将已通过页面按照最终大纲顺序整合成完整 PowerPoint。

## 17.2 合并条件

进入最终 Deck 的页面应至少满足：

- 页面结构合格；
- 页面完成视觉审核；
- 不存在阻塞性交付问题。

## 17.3 整体检查

Deck 至少检查：

- 页面数量；
- 页面顺序；
- 页面比例；
- 是否出现空白页；
- 页面是否能够正常渲染；
- 页面标题与大纲是否对应；
- 是否出现异常字体替换；
- 是否存在明显风格漂移；
- 页面之间视觉系统是否基本一致；
- 合并后对象是否仍然可编辑。

## 17.4 输出

- 完整可编辑 PPTX；
- Deck 检查结果。

---

# 18. F13 最终交付

## 18.1 功能目标

向最终用户提供清晰、必要、可直接使用的成果。

## 18.2 默认公开交付内容

```text
1. 最终大纲文档
2. 页面设计图片文件集
3. 最终可编辑 PPTX
```

## 18.3 默认不公开交付

以下内容默认属于内部运行产物：

- Layout 规格；
- QA 报告；
- Reviewer 原始报告；
- Agent call records；
- Runtime 日志；
- 中间资产报告；
- 调试数据；
- 内部状态文件。

用户明确需要诊断材料或当前处于开发 / 验证模式时，可以另外提供。

## 18.4 交付条件

最终 PPT 应满足：

- 能够正常打开；
- 能够正常保存；
- 能够正常渲染；
- 主要文字可编辑；
- 主要结构可编辑；
- 主要内容准确；
- 已完成规定的视觉审核；
- 页面顺序正确；
- 用户最终得到可直接继续编辑的 PowerPoint。

---

# 19. 两条主工作流

## 19.1 Content-to-PPT

```text
F00 Runtime Fast Preflight / Readiness
↓
F01 任务识别
↓
F02 材料读取与要求理解
↓
F03 大纲生成
↓
【用户必须确认大纲】
↓
F04 Wireframe / 布局规划
↓
F05 页面视觉设计策略
↓
F06 页面设计图片生成
↓
F07 图片转可编辑PPT
↓
F08 结构检查
↓
F09 Visual Reviewer
↓
F10 必要时最多2次定向修订
↓
F11 多页独立 / 并行处理
↓
F12 Deck整合与整体检查
↓
F13 最终交付
```

## 19.2 Image-to-Editable-PPT

```text
F00 Runtime Fast Preflight / Readiness
↓
F01 识别为图片转PPT
↓
F07 图片转可编辑PPT
↓
F08 结构检查
↓
F09 Visual Reviewer
↓
F10 必要时最多2次定向修订
↓
单页任务：直接交付
或
多页任务：F11 → F12
↓
F13 最终交付
```

---

# 20. 用户交互规则

## 20.1 强制交互

Content-to-PPT 中：

> 最终大纲必须获得用户确认。

## 20.2 灵活交互

以下结果根据任务复杂度和用户要求决定是否展示确认：

- Wireframe；
- 视觉样张；
- 全部页面设计图。

## 20.3 用户可以降低交互频率

用户可以明确要求：

- 直接继续；
- 不逐页确认；
- 不查看 Wireframe；
- 不等待样张确认。

但不能跳过：

- 内容准确性基本检查；
- 可编辑页面结构检查；
- 最终视觉审核。

---

# 21. 异常功能行为

## 21.1 材料无法读取

```text
材料无法可靠读取
→ 向用户说明
→ 不基于猜测继续
```

## 21.2 内容存在歧义

涉及：

- 核心事实；
- 用户意图；
- PPT 内容边界；

且无法可靠推断时，应向用户确认。

## 21.3 Environment Failure

当 Bootstrap、Fast Preflight 或 Runtime Repair 无法使环境达到当前任务所需能力时：

```text
environment_failure
```

此时：

- 不调用 Layout Planner；
- 不进入 PPT Build；
- 不调用 Visual Reviewer；
- 保留用户材料及已经完成的上游内容成果；
- 不重新生成大纲；
- 向用户明确说明当前环境缺失的关键能力。

## 21.4 技术错误

技术错误不应自动等同于内容规划错误。

应尽可能：

```text
保留已完成成果
→ 从失败阶段恢复
```

具体实现由 Runtime 执行规范定义。

## 21.5 局部视觉错误

应优先进入：

```text
局部定向修订
```

而不是重新规划整页。

## 21.6 Reviewer 发现严重内容错误

内容准确性优先级最高。

若视觉审核发现：

- 内容遗漏；
- 数字错误；
- 主要文字错误；
- 页面表达与已确认内容明显冲突；

应先修正内容，再重新审核。

---

# 22. 功能优先级

## P0：第一版核心功能

- F00 Runtime 初始化与可用性检查；
- F01 任务识别与入口路由；
- F02 材料读取与要求理解；
- F03 大纲生成与确认；
- F04 Wireframe / 布局规划；
- F05 页面视觉设计策略；
- F06 页面设计图片生成；
- F07 图片转可编辑 PPT；
- F08 页面结构检查；
- F09 Visual Reviewer；
- F10 最多两次定向修订；
- F12 Deck 整合；
- F13 最终交付。

## P1：第一版重要能力

- F11 页面并行能力；
- 5 页视觉样张策略；
- 用户灵活确认；
- 页面整体风格一致性检查；
- 用户要求优先的视觉策略。

## P2：后续增强

- 更智能的页面复杂度判断；
- 更自动化的整套 Deck 视觉审核；
- 更多 Agent Runtime 兼容；
- 更复杂的图表和信息图原生化；
- 更灵活的页面批量修改；
- 更丰富的设计策略。

---

# 23. 功能验收方向

功能开发完成后，至少应能够验证以下场景。

## 场景 0：Runtime 安装、预检与修复

```text
首次安装
→ Bootstrap
→ Verify
→ Ready
```

以及：

```text
正常任务
→ Fast Preflight
→ 发现可修复依赖问题
→ Runtime Repair
→ Reverify
→ Ready
→ 继续原任务
```

要求环境修复不得额外消耗 Layout Planner 语义调用或视觉修订次数。

## 场景 A：完整 Content-to-PPT

```text
用户提供材料和PPT要求
→ 产生候选大纲
→ 用户修改并确认
→ 所有页面经过布局规划
→ 生成页面设计图
→ 重建为可编辑PPT
→ 经过Visual Reviewer
→ 合并成完整PPT
→ 交付大纲、图片集和PPTX
```

## 场景 B：单张图片直接转换

```text
用户上传页面图片
→ 不进入大纲
→ 直接重建
→ 结构检查
→ Visual Reviewer
→ 交付可编辑PPT
```

## 场景 C：多张设计图

```text
多张图片
→ 页面任务可以独立处理
→ 条件允许时并行
→ 每页完成审核
→ 按原顺序合并
→ 完整PPT交付
```

## 场景 D：Reviewer 修订

```text
Reviewer发现局部问题
→ 定向修订
→ 重新审核
→ 必要时第二次定向修订
→ 最终判断
```

不得因为一个局部问题默认重新规划全部页面。

---

# 24. 功能边界总结

第一版 Skill 的功能边界可以概括为：

```text
理解材料
→ 规划内容
→ 用户确认
→ 规划布局
→ 设计页面
→ 生成设计图
→ 重建为可编辑PowerPoint
→ 检查结构
→ 审核视觉
→ 定向修订
→ 多页整合
→ 交付
```

其中：

- 模型负责理解、规划和视觉判断；
- Skill 负责规定完整功能流程；
- 宿主 Agent 负责执行和用户交互；
- 最终目标是可编辑且视觉质量良好的 PowerPoint，而不是单纯生成一张 PPT 图片。

---

# 25. 最终功能定义

`Content to Editable PPT Skill` v1.1 的功能目标是：

> 在受控 Runtime 已准备并通过可用性检查的前提下，为 Claude Code、Codex 等 AI Coding Agent 提供两条可组合的 PowerPoint 工作流：一条从用户材料出发完成内容规划、布局规划、视觉设计和完整 PPT 制作；另一条允许直接从页面图片进入可编辑 PowerPoint 重建。两条流程均以内容准确、主要结构可编辑和独立视觉审核为基本要求，并支持多页面独立处理、最多两次定向修订和最终多页整合交付。
